# zed_body_publisher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: PracticalSocket.h  utils.hpp
include/yolov8/: yolov8_seg.h  yolov8_utils.h
src/: PracticalSocket.cpp  main.cpp  yolov8_seg.cpp  yolov8_utils.cpp
yolo_seg_service/segmentation_srvs/: CMakeLists.txt  package.xml
yolo_seg_service/segmentation_srvs/srv/: Segmentation.srv
yolo_seg_service/yolo_seg/: CMakeLists.txt  package.xml
yolo_seg_service/yolo_seg/launch/: body_publisher.launch.py
yolo_seg_service/yolo_seg/scripts/: test_client.py  yolo_seg_service.py
zed_body_publisher/: CMakeLists.txt  README.md  package.xml
zed_body_publisher/include/: GLViewer.hpp  PracticalSocket.h  json.hpp  utils.hpp
zed_body_publisher/include/yolov8/: yolov8_utils.h
zed_body_publisher/launch/: zed_body_publisher.launch.py
zed_body_publisher/src/: main.cpp  yolov8_seg.cpp
